# magnepy

./: LICENSE  README.md  pyproject.toml
magnepy/: __init__.py  main.py
